--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,122 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/iv1"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="true"
+                android:background="@drawable/image_border"
+                android:padding="7dp"
+                app:srcCompat="@drawable/x" />
+
+            <ImageView
+                android:id="@+id/iv2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="true"
+                android:background="@drawable/image_border"
+                android:padding="7dp"
+                app:srcCompat="@drawable/x" />
+
+            <ImageView
+                android:id="@+id/iv3"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="true"
+                android:background="@drawable/image_border"
+                android:padding="7dp"
+                app:srcCompat="@drawable/x" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/iv4"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="true"
+                android:background="@drawable/image_border"
+                android:padding="7dp"
+                app:srcCompat="@drawable/x" />
+
+            <ImageView
+                android:id="@+id/iv5"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="true"
+                android:background="@drawable/image_border"
+                android:padding="7dp"
+                app:srcCompat="@drawable/x" />
+
+            <ImageView
+                android:id="@+id/iv6"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="true"
+                android:background="@drawable/image_border"
+                android:padding="7dp"
+                app:srcCompat="@drawable/x" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/iv7"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="true"
+                android:background="@drawable/image_border"
+                android:padding="7dp"
+                app:srcCompat="@drawable/x" />
+
+            <ImageView
+                android:id="@+id/iv8"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="true"
+                android:background="@drawable/image_border"
+                android:padding="7dp"
+                app:srcCompat="@drawable/x" />
+
+            <ImageView
+                android:id="@+id/iv9"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="true"
+                android:background="@drawable/image_border"
+                android:padding="7dp"
+                app:srcCompat="@drawable/x" />
+        </TableRow>
+
+    </TableLayout>
+
+    <Button
+        android:id="@+id/btnStartGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="Start New Game"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
