--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,8 +23,8 @@
                 android:id="@+id/iv1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:clickable="true"
                 android:background="@drawable/image_border"
+                android:clickable="true"
                 android:padding="7dp"
                 app:srcCompat="@drawable/x" />
 
@@ -31,8 +32,8 @@
                 android:id="@+id/iv2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:clickable="true"
                 android:background="@drawable/image_border"
+                android:clickable="true"
                 android:padding="7dp"
                 app:srcCompat="@drawable/x" />
 
@@ -40,8 +41,8 @@
                 android:id="@+id/iv3"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:clickable="true"
                 android:background="@drawable/image_border"
+                android:clickable="true"
                 android:padding="7dp"
                 app:srcCompat="@drawable/x" />
 
@@ -55,8 +56,8 @@
                 android:id="@+id/iv4"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:clickable="true"
                 android:background="@drawable/image_border"
+                android:clickable="true"
                 android:padding="7dp"
                 app:srcCompat="@drawable/x" />
 
@@ -64,8 +65,8 @@
                 android:id="@+id/iv5"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:clickable="true"
                 android:background="@drawable/image_border"
+                android:clickable="true"
                 android:padding="7dp"
                 app:srcCompat="@drawable/x" />
 
@@ -73,8 +74,8 @@
                 android:id="@+id/iv6"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:clickable="true"
                 android:background="@drawable/image_border"
+                android:clickable="true"
                 android:padding="7dp"
                 app:srcCompat="@drawable/x" />
 
@@ -88,8 +89,8 @@
                 android:id="@+id/iv7"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:clickable="true"
                 android:background="@drawable/image_border"
+                android:clickable="true"
                 android:padding="7dp"
                 app:srcCompat="@drawable/x" />
 
@@ -97,8 +98,8 @@
                 android:id="@+id/iv8"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:clickable="true"
                 android:background="@drawable/image_border"
+                android:clickable="true"
                 android:padding="7dp"
                 app:srcCompat="@drawable/x" />
 
@@ -106,8 +107,8 @@
                 android:id="@+id/iv9"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:clickable="true"
                 android:background="@drawable/image_border"
+                android:clickable="true"
                 android:padding="7dp"
                 app:srcCompat="@drawable/x" />
         </TableRow>
@@ -123,5 +124,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txtWinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/btnStartGame"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
