--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,4 +134,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
 
+    <Switch
+        android:id="@+id/swFirstTurn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Alternate First Turn"
+        app:layout_constraintBottom_toTopOf="@+id/btnStartGame"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtWinner" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
